# Unofficial-VS-MCP

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  Unoffcial-VS-MCP.sln  build.cmd
.github/workflows/: publish-marketplace.yml
src/VsMcp.Debugger/: DebuggerEventListener.cs  DebuggerEventLog.cs  IdeDebuggerEvents.vsdconfigxml  README.md  RuntimeDebuggerEvents.vsdconfigxml  VsMcp.Debugger.csproj
src/VsMcp.Extension/: VsMcp.Extension.csproj  VsMcpPackage.cs  overview.md  publishManifest.json  source.extension.vsixmanifest
src/VsMcp.Extension.VS2019/: VsMcp.Extension.VS2019.csproj  publishManifest.json  source.extension.vsixmanifest
src/VsMcp.Extension/McpServer/: McpRequestRouter.cs  McpToolRegistry.cs
src/VsMcp.Extension/Services/: VsServiceAccessor.cs
src/VsMcp.Extension/Tools/: BreakpointTools.cs  BuildTools.cs  CSharpCodeTools.cs  CppCodeTools.cs  DebugHelpers.cs  DebuggerTools.cs  DiagnosticsTools.cs  EditPreviewTools.cs  EditorTools.cs  ExceptionSettingsTools.cs  FindReferencesTableReader.cs  GeneralTools.cs  (+12 more)
src/VsMcp.Shared/: PortDiscovery.cs  SchemaBuilder.cs  ToolCategoryMap.cs  ToolDefinitionCache.cs  VsMcp.Shared.csproj
src/VsMcp.StdioProxy/: Program.cs  VsMcp.StdioProxy.csproj
tests/cpp/: CppTestSamples.sln
tests/cpp/CTestSample/: CMakeLists.txt  CMakePresets.json  test.cpp
tuning/vs-mcp/: dispatch-input-iter2.md  dispatch-input.md  iter0-consistency-table.md  iter1-results.md  iter1-scenarios.md  iter1-subagent-output.md  iter2-results.md  iter2-subagent-output.md  iteration-log.md  snapshot-iter0-post.md  snapshot-iter0-pre.md
(+10 files in other folders)
